# dbus-starlink

./: README.md  dishy.proto  dishy_pb2.py  dishy_pb2_grpc.py  gitHubInfo  pyproject.toml  setup  starlink.py  version
services/dbus-starlink/: run
services/dbus-starlink/log/: run
